--- a/templates/code_generator.html
+++ b/templates/code_generator.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   </head>
   <body>
-    <section class="container-fluid">
+    <section class="">
         <div class="text-center p-5 bg-success">
             <strong>SERIAL FORMATTER</strong>
         </div>
@@ -18,7 +18,7 @@
             <p>{{err}}</p>
         </div>
         {% endif %}
-        <div class="col justify-content-center text-center mt-3 p-3">
+        <div class="col mx-auto justify-content-center text-center mt-3 p-3">
             <form action="/" method='post'>
                 <div class="mb-3 row">
                     <label for="serial" class="col-sm-2 col-form-label">Serial</label>
