--- a/templates/code_generator.html
+++ b/templates/code_generator.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   </head>
   <body>
-    <section class="">
+    <section class="mb-4">
         <div class="text-center p-5 bg-success">
             <strong>SERIAL FORMATTER</strong>
         </div>
@@ -37,14 +37,14 @@
         </div>
 
         {% if res %}
-        <div class="bg-primary text-center mt-3 p-3">
+        <div class="bg-primary text-center mt-3 p-3 mb-3">
             <strong>Formated Serial</strong> = '{{res}}'
         </div>
         {% endif %}
        
     </section>
 
-    <footer class="footer">
+    <footer class="footer mt-4">
         <section class="">
             <div class="container text-center mt-5">
                 <div class="row mt-3">
