--- a/templates/code_generator.html
+++ b/templates/code_generator.html
@@ -9,66 +9,69 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   </head>
   <body>
-    <section class="mb-4">
-        <div class="text-center p-5 bg-success">
-            <strong>SERIAL FORMATTER</strong>
-        </div>
-        {% if err %}
-        <div class="mt-2 bg-danger text-center">
-            <p>{{err}}</p>
-        </div>
-        {% endif %}
-        <div class="col mx-auto justify-content-center text-center mt-3 p-3">
-            <form action="/" method='post'>
-                <div class="mb-3 row">
-                    <label for="serial" class="col-sm-2 col-form-label">Serial</label>
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" id="serial" name="serial" placeholder="Enter-Serial">
-                    </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="length" class="col-sm-2 col-form-label">Length</label>
-                    <div class="col-sm-6">
-                        <input type="number" min="1" max="4" class="form-control" id="length" name="length" placeholder="Length" />
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Generate</button>
-            </form>
-        </div>
-
-        {% if res %}
-        <div class="bg-primary text-center mt-3 p-3 mb-3">
-            <strong>Formated Serial</strong> = '{{res}}'
-        </div>
-        {% endif %}
-       
-    </section>
-
-    <footer class="footer mt-4">
-        <section class="">
-            <div class="container text-center mt-5">
-                <div class="row mt-3">
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-center">
-                        <p><i class="fas fa-home me-3"></i>London</p>
-                        <p>
-                            <i class="fas fa-envelope me-3"></i>
-                            allanstocco@hotmail.com
-                        </p>
-                        <p><i class="fas fa-phone me-3"></i>(+44) 07460 - 031651</p>
-                    </div>
-                    <!-- Grid column -->
-                </div>
-                <!-- Grid row -->
+        <header>
+            <div class="text-center p-5 bg-success">
+                <strong>SERIAL FORMATTER</strong>
             </div>
-        </section>
-        <!-- Section: Links  -->
+        </header>
+        <section class="mb-4">
+            {% if err %}
+            <div class="mt-2 bg-danger text-center">
+                <p>{{err}}</p>
+            </div>
+            {% endif %}
+            <div class="col mx-auto justify-content-center text-center mt-3 p-3 vh-100">
+                <form action="/" method='post'>
+                    <div class="mb-3 row">
+                        <label for="serial" class="col-sm-2 col-form-label">Serial</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" id="serial" name="serial" placeholder="Enter-Serial">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="length" class="col-sm-2 col-form-label">Length</label>
+                        <div class="col-sm-6">
+                            <input type="number" min="1" max="4" class="form-control" id="length" name="length" placeholder="Length" />
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Generate</button>
+                </form>
 
-        <!-- Copyright -->
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            <a class="text-reset fw-bold" href="https://allanstocco.netlify.app/">allanstocco</a>
-        </div>
-        <!-- Copyright -->
-    </footer>
+                {% if res %}
+                <div class="bg-primary text-center mt-3 p-3 mb-3">
+                    <strong>Formated Serial</strong> = '{{res}}'
+                </div>
+                {% endif %}
+            </div>
+
+           
+        </section>
+
+        <footer class="footer mt-4">
+            <section class="">
+                <div class="container text-center mt-5">
+                    <div class="row mt-3">
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-center">
+                            <p><i class="fas fa-home me-3"></i>London</p>
+                            <p>
+                                <i class="fas fa-envelope me-3"></i>
+                                allanstocco@hotmail.com
+                            </p>
+                            <p><i class="fas fa-phone me-3"></i>(+44) 07460 - 031651</p>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+
+            <!-- Copyright -->
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+                <a class="text-reset fw-bold" href="https://allanstocco.netlify.app/">allanstocco</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
